$Id: ChangeLog,v 1.19 2005-02-25 12:15:45 cmatsuoka Exp $

Stable versions
---------------

2.1.1 ()
	- added more module format specs
	- added MO3 unpacking support
	- added file detection to the XMMS plugin
	- added Beep Media Player support to the XMMS plugin
	- added Epic Megagames PSM module support
	- added Epic Megagames old PSM (Silverball) module support
	- added DSMI/DMP Advanced Module Format support
	- added support to Ultimate Soundtracker modules
	- added ALSA 0.9/1.0 sound output support
	- fixed recursive decrunching of module files
	- fixed QNX6 portability issues (by Mike Gorchak)
	- fixed heavy memory leak in the XMMS plugin
	- fixed --time command-line parameter
	- fixed portamento-after-keyoff bug (Jeronen Tel's "Nine One One"
	  now plays correctly)
	- fixed IFF file loading to avoid data alignment errors
	- updated OPL emulation (by Mike Gorchak)
	- default verbosity level changed to 1
	- default sound mode set to stereo
	- disabled MED loader (nonportable, didn't work well)

2.1.0 (unreleased)
	- Added Takuya Ooura's FFT code
	- Added scope/spectrum analyser modes to xxmp
	- Fixed dynamic driver loading to honour the configuration prefix
	- Added --with-esd option to the configuration script for esd in
	  FreeBSD (reported by Nate Dannenberg <natedac@kscable.com>)
	- Added xxmp panel and module info to XMMS info box
	- Fixed YM3812 emulator output in mono and stereo modes
	- Reordered extra libraries in Makefile.rules to build correctly in
	  IRIX 6.5.10/gcc 2.95.2 (reported by Johan Hattne <hattne@ibg.uu.se>)
	- Added aRts driver
	- Added NAS driver (based on Martin Denn's mpg123 NAS driver)
	- Added experimental QNX4 driver based on Mike Gorchak's nspmod port
	- Added experimental win32 driver based on Tony Million's mpg123 driver
	- Added NEO Software/Electronic Rats HSC module loader
	- Added Liquid Tracker module 0.0 and 1.0 support
	- Added callback driver for plugins
	- XMMS plugin changed to use the callback driver